<resources>
    <string name="app_version">Версия 3.10</string>

    <string name="movie_page_title">Билет в кино</string>
    <string name="concert_page_title">Билет на концерт</string>
    <string name="history_page_title">История</string>
    <string name="main_page_header">Выберите тип билета:</string>

    <string name="Ticket_type_1">Билет в кино</string>
    <string name="Ticket_type_2">Билет на концерт</string>

    <string name="name_label">Фильм:</string>
    <string name="hall_label">Зал: </string>
    <string name="date_label">Дата:</string>
    <string name="time_label">Сеанс:</string>
    <string name="time_label_second">Время:</string>
    <string name="row_label">Ряд:</string>
    <string name="place_label">Место:</string>

    <string name="submit_btn">Готово</string>
    <string name="clear_btn">Очистить</string>
    <string name="report_btn">Отчет</string>
    <string name="history_btn">История</string>
    <string name="settings_btn">Настройки</string>
    <string name="save_btn">Сохранить</string>
    <string name="back_btn">Назад</string>

    <string name="show_2_weeks">🔍 Все</string>
    <string name="show_1_day">🔍 1 день</string>

    <string name="settings_label_text">Настройки</string>
    <string name="settings_phone_text">Номер телефона</string>
    <string name="settings_ticket_text">Стоимость билета</string>
    <string name="settings_hall_number_text">Не указывать номер зала</string>
    <string name="settings_WA_open_text">Открывать WhatsApp после создания билета</string>
    <string name="settings_phone_number_text">Показывать номер телефона</string>
    <string name="settings_btn_text">💾 Сохранить</string>

    <string name="default_hint">- ввод -</string>
    <string name="scrollView_desc">История пуста...</string>

    <string name="dateTime_val_hint">Выбрать ▽</string>
    <string name="app_name">Юла билет</string>
</resources>