<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/settings_label_text"
            android:textAlignment="center"
            android:textColor="@color/black"

            android:textSize="18pt"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        android:visibility="gone">

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:padding="2dp"
            android:text="@string/settings_phone_text"
            android:textColor="@color/gray"
            android:textSize="7pt" />

        <EditText
            android:id="@+id/phone_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/default_hint"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ticketCost_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingHorizontal="15dp"
        android:layout_marginTop="16dp"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_field_container">

        <TextView
            android:id="@+id/ticketCost_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:text="@string/settings_ticket_text"
            android:textColor="@color/gray"
            android:textSize="7pt"
            tools:ignore="TextSizeCheck" />

        <Spinner
            android:id="@+id/ticketCost_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="2"

            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/WA_open_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketCost_field_container">

        <CheckBox
            android:id="@+id/WA_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_WA_open_text"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"

        android:orientation="horizontal"

        android:paddingVertical="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:id="@+id/back_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"

            android:background="@drawable/buttons_base_button"

            android:layout_weight="1"
            android:gravity="center"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:padding="5dp"
                app:srcCompat="@drawable/icons_back_btn_icon" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:paddingLeft="5dp"

                android:fontFamily="@font/hikasami_bold"
                android:textColor="@color/white"
                android:textSize="10pt"

                android:textAlignment="textStart"

                android:text="@string/back_btn" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"

            android:background="@drawable/buttons_base_button"

            android:layout_weight="1"
            android:gravity="center"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:padding="5dp"
                app:srcCompat="@drawable/icons_save_icon" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:paddingLeft="5dp"

                android:fontFamily="@font/hikasami_bold"
                android:textColor="@color/white"
                android:textSize="10pt"

                android:textAlignment="textStart"

                android:text="@string/save_btn" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>