<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/appHeaderContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/appLogoImage"
                android:layout_width="110dp"
                android:layout_height="110dp"
                app:srcCompat="@drawable/images_ula_minimal_logo" />

            <LinearLayout
                android:id="@+id/appNameTextContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/appNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/podarok"
                    android:paddingLeft="10dp"

                    android:text="@string/app_name"
                    android:textAlignment="textStart"
                    android:textColor="@color/gray"

                    android:textSize="24pt" />

                <TextView
                    android:id="@+id/appVersionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hikasami_bold"

                    android:paddingLeft="10dp"
                    android:text="@string/app_version"
                    android:textColor="@color/l_gray"
                    android:textSize="6pt"

                    tools:ignore="TextSizeCheck" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/SelectTypeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"

            android:fontFamily="@font/unageo_bold"
            android:text="@string/main_page_header"
            android:textAlignment="center"
            android:textColor="@color/gray"

            android:textSize="13pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appHeaderContainer" />

        <ScrollView
            android:id="@+id/TicketTypeContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="list"
            android:paddingVertical="5dp"
            app:layout_constraintBottom_toTopOf="@+id/UtilsContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SelectTypeText">

            <LinearLayout
                android:id="@+id/OptionList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/MovieOptionContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"

                    android:background="@drawable/buttons_pink_main_btn"

                    android:gravity="center"

                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/MovieOptionImage"
                        android:layout_width="80dp"
                        android:layout_height="90dp"
                        android:padding="8dp"
                        app:srcCompat="@drawable/icons_movie_btn_icon" />

                    <TextView
                        android:id="@+id/MovieOptionTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:fontFamily="@font/unageo_bold"
                        android:paddingLeft="5dp"
                        android:text="@string/Ticket_type_1"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"

                        android:textSize="12pt"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>

                <View
                    android:id="@+id/OptionSpace"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/ConcertOptionContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"

                    android:background="@drawable/buttons_pink_main_btn"

                    android:gravity="center"

                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ConcertOptionImage"
                        android:layout_width="80dp"
                        android:layout_height="90dp"
                        android:padding="8dp"
                        app:srcCompat="@drawable/icons_concert_btn_icon" />

                    <TextView
                        android:id="@+id/ConcertOptionTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:fontFamily="@font/unageo_bold"
                        android:paddingLeft="5dp"
                        android:text="@string/Ticket_type_2"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"

                        android:textSize="12pt"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/UtilsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/InfoButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/icons_info_btn_icon" />

            <View
                android:id="@+id/UtilsSpace"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/SettingsButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/icons_settings_icon" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>